--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsm-editor": "^0.0.12",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
